# ComfyUI-WebhookNotifier

./: README.md  __init__.py  config.json  pyproject.toml  requirements.txt  webhook_notifier.py
.github/workflows/: publish.yml
